# CodeCluster

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md  build.sh  format-code.py  set-clang.sh
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: README.md
docs/archdoc/: ArchDoc_ru.md  index.md
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: codecluster_test.cpp
